# switchboard-sdk

rust/switchboard-solana/: Cargo.toml
rust/switchboard-solana/src/client/: validator.rs
rust/switchboard-solana/src/oracle_program/accounts/: aggregator.rs  buffer_relayer.rs  ecvrf.rs
rust/switchboard-v2/: Cargo.toml
rust/switchboard-v2/src/: aggregator.rs  buffer_relayer.rs  crank.rs  ecvrf.rs  oracle.rs
