[package]
name = "switchboard-v2"
version = "0.3.1"
edition = "2021"
description = "A Rust library to interact with Switchboard V2 accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz/sbv2-solana/tree/main/rust/switchboard-v2"
license = "MIT"
documentation = "https://docs.rs/switchboard-v2/"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_v2"
doctest = false

[features]
default = ["cpi", "no-idl"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
rust_decimal = "=1.35.0"
bytemuck = "1.13.1"
superslice = "1"
solana-program = "=1.18.17"
anchor-spl = { git = "https://github.com/bridgesplit/anchor", features = [
    "idl-build",
] }
anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = [
    "init-if-needed",
    "event-cpi",
    "idl-build",
] }
# toml_datetime = "=0.6.1"
# winnow = "=0.4.1"
# toml_edit = "=0.19.8"
